Switching to use java.awt.Desktop. to open browser urls.